--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "node backend/server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^4.21.2"
   }
 }
